recording: Use the current session render node consistently across recording

KPipeWire currently chooses GPU/render devices in multiple places independently
(VAAPI selection, DMA-BUF handling, modifier negotiation). On hybrid systems
this can lead to inconsistent GPU selection across the recording pipeline.

This change introduces a shared session render-node resolver and uses the
current session render node consistently for:

- VAAPI device selection
- DMA-BUF import path
- stream modifier negotiation

BUG: 518008
FIXED-IN: 6.7.0